--- a/agent/from vector store.ipynb
+++ b/agent/from vector store.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,12 @@
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "serper_api_key = os.getenv(\"SERP_API_KEY\")\n",
     "os.environ[\"LANGCHAIN_WANDB_TRACING\"] = \"true\"\n",
-    "os.environ[\"WANDB_PROJECT\"] = \"llmapps\"\n",
-    "\n"
+    "os.environ[\"WANDB_PROJECT\"] = \"llmapps\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +37,26 @@
     "from langchain.llms import OpenAI\n",
     "from langchain.chains import RetrievalQA\n",
     "\n",
-    "llm = OpenAI(temperature=0)\n"
+    "llm = ChatOpenAI(temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Load the documents\n",
-    "\n",
     "from langchain.document_loaders import DirectoryLoader\n",
     "\n",
     "def find_md_files(directory):\n",
@@ -56,15 +64,26 @@
     "    dl = DirectoryLoader(directory, \"**/*.pdf\")\n",
     "    return dl.load()\n",
     "\n",
-    "documents = find_md_files('Resumes')\n",
-    "len(documents)"
+    "documents = find_md_files('../new_pdf')\n",
+    "len(documents)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "\n",
@@ -75,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,35 +103,68 @@
     "\n",
     "# We will use the OpenAIEmbeddings to embed the text, and Chroma to store the vectors\n",
     "embeddings = OpenAIEmbeddings()\n",
-    "db = Chroma.from_documents(document_sections, embeddings)\n"
+    "db = Chroma.from_documents(document_sections, embeddings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "retriever = db.as_retriever(search_kwargs=dict(k=3))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VectorStoreRetriever(tags=['Chroma', 'OpenAIEmbeddings'], metadata=None, vectorstore=<langchain.vectorstores.chroma.Chroma object at 0x174f2bb50>, search_type='similarity', search_kwargs={'k': 3})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "query = \"The resume of graphic\"\n",
-    "docs = retriever.get_relevant_documents(query)\n"
+    "retriever"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Streaming LangChain activity to W&B at https://wandb.ai/zestt/llmapps/runs/9fc2x6dm\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: `WandbTracer` is currently in beta.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Please report any issues to https://github.com/wandb/wandb/issues with the tag `langchain`.\n",
+      "Number of requested results 3 is greater than number of elements in index 2, updating n_results = 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"I'm sorry, but based on the given context, there is no information about graphic designers.\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "qa = RetrievalQA.from_chain_type(llm=OpenAI(), chain_type=\"stuff\", retriever=retriever)\n",
+    "qa = RetrievalQA.from_chain_type(llm=llm, chain_type=\"stuff\", retriever=retriever)\n",
     "query = \"Tell me more about the graphic desingers\"\n",
     "qa.run(query)\n"
    ]
@@ -134,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
