--- a/agent/uploadagentflow.ipynb
+++ b/agent/uploadagentflow.ipynb
@@ -2,32 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv(\"../.env\")\n",
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.experimental.plan_and_execute import PlanAndExecute, load_agent_executor, load_chat_planner\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.agents.tools import Tool\n",
-    "from langchain import LLMMathChain\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "import json\n",
-    "import requests\n",
-    "\n",
-    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "serper_api_key = os.getenv(\"SERP_API_KEY\")\n",
-    "# os.environ[\"LANGCHAIN_WANDB_TRACING\"] = \"true\"\n",
-    "# os.environ[\"WANDB_PROJECT\"] = \"llmapps\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ROBIN GRAHAM\\nSOFTWARE DEVELOPERrobin.graham@gmail.com\\n202-555-0101\\nPasadena, CA, US\\nlinkedin.com/in/robin\\nSUMMARY Working in tech companies since 2013, I succeed to grow my programming skills in\\ndifferent areas. I participate in projects which developing applications for Windows,\\nAndroid, Web, and firmware for hardware devices also.\\nMy practical experience is with C and C++ languages and I am motivated to mastering\\nthose skills and to enrich my knowledge with a new one.\\nSKILLS AND\\nTECHNOLOGIESC / C++\\nHMTL, CSS, Javascript, PHP, MySQL\\nJava, XML\\nSVN, Mercurial\\nIAR, Eclipse, Embarcadero RAD Studio XE5, Android Studio\\nJSON, XML\\nEXPERIENCE\\nOpenXcell, NY Sep 2016 -PresentEmbedded Software Engineer\\nDevelop and support device firmware\\nImplementing new features\\nRe-writing a radio protocol using for communication between devices\\nImplement web sockets communication encrypted by SSL\\nSyberry Corporation, CA Oct 2015 -Sep 2016Software Engineer\\nWrite a drive for a RTC module\\nWrite a universal module for inhibition a functionalities depending on some cases\\nRun a unit test via Tessy\\nWriting a C code following MISRA and verify it with QA-C\\nBelatrix Software, LA Oct 2013 -Oct 2015UI Software Developer\\nDevelop a Windows applications in C++ using RAD Studio\\nDevelop a web application for one of the Windows applications to read or set up the\\nGPS device from distance\\nPromatics Technologies, Chicago Jul 2011 -Feb 2012Software Support and Development\\nDesing a user menus for set-top-box devices for digital TV\\nTesting and fixing software faults\\nImplementing new features\\nEDUCATION\\nJohns Hopkins University, Baltimore, MD Sep 2013 -Sep 2015Master of Computer Systems and Technologies\\nNorthwestern University, Evanston, IL Sep 2009 -Sep 2013Bachelor of Computer Systems and Technologies\\nLANGUAGES English\\nBulgarianFrench\\nwww.resumekraft.com'"
+       "'Education\\nShah and anchor kutchhi\\nengineering collegeCGPA : 8.82Bachelor of Engineering\\n (Artificial intelligence and data\\nscience )Poojan Vig\\nEnthusiastic and driven Data Science Engineer with a year of experience in\\nfintech companies, specializing in AI and machine learning. Recognized for\\nwinning two AI-based hackathons within a six-month period, showcasing a\\nstrong ability to develop and implement creative solutions to complex\\nproblems. Developed notable projects in areas including AI framing, pose\\ndetection, parking, and image classification, demonstrating advanced\\nproficiency in Python, TensorFlow, sklearn, and SQL. Showcased a strong\\ninterest and focus in Reinforcement Learning and Generative AI. Aiming to\\nleverage my skills and passion for data science to solve challenging problems\\nand make significant contributions as a Data Scientist.\\nLinked_inContact\\n+91 9167989179Phone\\npoojanvig.pv@gmail.comEmail IdMumbai, Maharashtra-400074Address:\\nhttps://www.linkedin.com/in/poojan-\\nvig/Technical Skills:\\n Programming Languages: Python, R, Java, C, SQL\\nMachine Learning Libraries: scikit-learn, TensorFlow\\nData Visualization Tools: Matplotlib, Seaborn, ggplot,\\nTableau,Power BI\\nDatabases: MySQL\\nCloud Platforms: Microsoft Azure\\nData Science Specific Skills:\\nStatistical Analysis: Proficient in utilizing statistical methodologies\\nfor analyzing and interpreting complex datasets, including\\nregression analysis, hypothesis testing, and statistical inference.\\nMachine Learning: Extensive experience in applying Supervised and\\nUnsupervised learning, Reinforcement learning algorithms to large\\ndatasets. Skilled in implementing Natural Language Processing\\ntechniques and building Neural Networks for complex prediction\\ntasks.\\nData Wrangling: Demonstrated ability in cleaning, validating, and\\ntransforming raw data into a structured format for analysis.\\nProficient in handling missing data, outliers, and inconsistencies to\\nensure the integrity and reliability of data.\\nData Exploration/Analysis: Proficient in exploring and analyzing\\nlarge datasets to extract insights and identify patterns. Skilled in\\nusing data visualization tools to present findings and effectively\\ncommunicate data-driven insights to technical and non-technical\\nstakeholders.\\nSoft Skills:\\nProblem-solving\\nCommunication\\nTeamwork\\nCritical ThinkingProceeding Skills\\nMicrosoft Ai fundamentalsAdvance DBMSTensorflow developer certificate\\nEnglish\\nHindi\\nPunjabi\\nMarathi Languages'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +31,7 @@
     "from langchain.document_loaders import PyPDFLoader\n",
     "\n",
     "\n",
-    "loader = PyPDFLoader(\"../new_pdf/Software Developer.pdf\")\n",
+    "loader = PyPDFLoader(\"../new_pdf/Poojan_vig resume.pdf\")\n",
     "final = loader.load()\n",
     "resume = final[0].page_content\n",
     "resume"
@@ -64,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +65,14 @@
     "    Responsibilities: list[str]\n",
     "    Achievements: Optional[list[str]]\n",
     "    Projects: Optional[list[str]]\n",
+    "    LinkedIn_Url: Optional[str]\n",
+    "    Github_Url: Optional[str]\n",
     "    Hobbies: Optional[list[str]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,88 +130,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='{\\n  \"Name\": \"Poojan Vig\",\\n  \"Contact\": \"+91 9167989179\",\\n  \"Location\": \"Mumbai, Maharashtra-400074\",\\n  \"University\": \"Shah and Anchor Kutchhi Engineering College\",\\n  \"Degree\": \"Bachelor of Engineering\",\\n  \"Major\": \"Artificial Intelligence and Data Science\",\\n  \"Graduation_Year\": 0,\\n  \"Skills\": [\\n    \"Python\",\\n    \"R\",\\n    \"Java\",\\n    \"C\",\\n    \"SQL\",\\n    \"scikit-learn\",\\n    \"TensorFlow\",\\n    \"Matplotlib\",\\n    \"Seaborn\",\\n    \"ggplot\",\\n    \"Tableau\",\\n    \"Power BI\",\\n    \"MySQL\",\\n    \"Microsoft Azure\",\\n    \"Statistical Analysis\",\\n    \"Machine Learning\",\\n    \"Data Wrangling\",\\n    \"Data Exploration/Analysis\",\\n    \"Problem-solving\",\\n    \"Communication\",\\n    \"Teamwork\",\\n    \"Critical Thinking\"\\n  ],\\n  \"Certifications\": [\\n    \"Microsoft AI Fundamentals\",\\n    \"Advance DBMS\",\\n    \"TensorFlow Developer Certificate\"\\n  ],\\n  \"Languages\": [\\n    \"English\",\\n    \"Hindi\",\\n    \"Punjabi\",\\n    \"Marathi\"\\n  ],\\n  \"Role\": \"Data Science Engineer\",\\n  \"Company\": \"\",\\n  \"Start_Date\": \"\",\\n  \"End_Date\": \"\",\\n  \"Experience\": 1,\\n  \"Responsibilities\": [],\\n  \"Achievements\": [\\n    \"Won two AI-based hackathons within a six-month period\"\\n  ],\\n  \"Projects\": [\\n    \"AI framing\",\\n    \"Pose detection\",\\n    \"Parking\",\\n    \"Image classification\"\\n  ],\\n  \"LinkedIn_Url\": \"https://www.linkedin.com/in/poojan-vig/\",\\n  \"Github_Url\": \"\",\\n  \"Hobbies\": []\\n}', additional_kwargs={}, example=False)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = llm(messages)\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = llm(messages)"
+    "# Markdown(output.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "{\n",
-       "  \"Name\": \"ROBIN GRAHAM\",\n",
-       "  \"Contact\": \"robin.graham@gmail.com\",\n",
-       "  \"Location\": \"Pasadena, CA, US\",\n",
-       "  \"University\": \"Johns Hopkins University\",\n",
-       "  \"Degree\": \"Master of Computer Systems and Technologies\",\n",
-       "  \"Major\": \"Computer Systems and Technologies\",\n",
-       "  \"Graduation_Year\": 2015,\n",
-       "  \"Skills\": [\n",
-       "    \"C / C++\",\n",
-       "    \"HMTL, CSS, Javascript, PHP, MySQL\",\n",
-       "    \"Java, XML\",\n",
-       "    \"SVN, Mercurial\",\n",
-       "    \"IAR, Eclipse, Embarcadero RAD Studio XE5, Android Studio\",\n",
-       "    \"JSON, XML\"\n",
-       "  ],\n",
-       "  \"Certifications\": [],\n",
-       "  \"Languages\": [\n",
-       "    \"English\",\n",
-       "    \"Bulgarian\",\n",
-       "    \"French\"\n",
-       "  ],\n",
-       "  \"Role\": \"Embedded Software Engineer\",\n",
-       "  \"Company\": \"OpenXcell\",\n",
-       "  \"Start_Date\": \"Sep 2016\",\n",
-       "  \"End_Date\": \"Present\",\n",
-       "  \"Experience\": 4,\n",
-       "  \"Responsibilities\": [\n",
-       "    \"Develop and support device firmware\",\n",
-       "    \"Implementing new features\",\n",
-       "    \"Re-writing a radio protocol using for communication between devices\",\n",
-       "    \"Implement web sockets communication encrypted by SSL\"\n",
-       "  ],\n",
-       "  \"Achievements\": [],\n",
-       "  \"Projects\": [],\n",
-       "  \"Hobbies\": []\n",
-       "}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Markdown(output.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ROBIN GRAHAM'"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "the_brand = pydantic_parser.parse(output.content)\n",
     "\n"
@@ -242,30 +170,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "dict"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(output.content)"
+    "output.content\n",
+    "type(json.loads(output.content))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Applicant(Name='Poojan Vig', Contact='+91 9167989179', Location='Mumbai, Maharashtra-400074', University='Shah and Anchor Kutchhi Engineering College', Degree='Bachelor of Engineering', Major='Artificial Intelligence and Data Science', Graduation_Year=0, Skills=['Python', 'R', 'Java', 'C', 'SQL', 'scikit-learn', 'TensorFlow', 'Matplotlib', 'Seaborn', 'ggplot', 'Tableau', 'Power BI', 'MySQL', 'Microsoft Azure', 'Statistical Analysis', 'Machine Learning', 'Data Wrangling', 'Data Exploration/Analysis', 'Problem-solving', 'Communication', 'Teamwork', 'Critical Thinking'], Certifications=['Microsoft AI Fundamentals', 'Advance DBMS', 'TensorFlow Developer Certificate'], Languages=['English', 'Hindi', 'Punjabi', 'Marathi'], Role='Data Science Engineer', Company='', Start_Date='', End_Date='', Experience=1, Responsibilities=[], Achievements=['Won two AI-based hackathons within a six-month period'], Projects=['AI framing', 'Pose detection', 'Parking', 'Image classification'], LinkedIn_Url='https://www.linkedin.com/in/poojan-vig/', Github_Url='', Hobbies=[])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_brand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(\"../.env\")\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.experimental.plan_and_execute import PlanAndExecute, load_agent_executor, load_chat_planner\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.agents.tools import Tool\n",
+    "from langchain import LLMMathChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "import json\n",
+    "import requests\n",
+    "# \n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "# serper_api_key = os.getenv(\"SERP_API_KEY\")\n",
+    "# os.environ[\"LANGCHAIN_WANDB_TRACING\"] = \"true\"\n",
+    "# os.environ[\"WANDB_PROJECT\"] = \"llmapps\""
+   ]
   }
  ],
  "metadata": {
@@ -284,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
