--- a/agent/final agent.ipynb
+++ b/agent/final agent.ipynb
@@ -95,6 +95,69 @@
     "    analyzer = GithubProfileAnalyzer(anthropic_api_key=anthropic_api_key, serper_api_key=serper_api_key)\n",
     "    return analyzer.analyze(profile_url)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resume_tool = Tool(\n",
+    "    name=\"Resume Extraction\",\n",
+    "    func=extract_resume_information,\n",
+    "    description=\"Useful for extracting information from a resume. The function takes a path to a PDF file as input.\"\n",
+    ")\n",
+    "\n",
+    "# Define the tool for analyzing a GitHub profile\n",
+    "github_tool = Tool(\n",
+    "    name=\"GitHub Profile Analysis\",\n",
+    "    func=analyze_github_profile,\n",
+    "    description=\"Useful for analyzing a GitHub profile. The function takes a GitHub profile URL as input.\"\n",
+    ")\n",
+    "\n",
+    "tools = [resume_tool, github_tool]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_message=SystemMessage(\n",
+    "    content=\"\"\"You are a world class HR, who hires people based on their talent and skills; \n",
+    "            you do not make things up, you will try as hard as possible to learn facts, data and infromation from their resumes and github\n",
+    "                        \n",
+    "            Please make sure you complete the objective above with the following rules:\n",
+    "            1/ Extract all the information from the resume and understand it\n",
+    "            2/ From the extracted data use the github link to analysis that persons github profile\n",
+    "            3/ After collecting all the information and analysing it, you should conclude the summery of that person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_kwargs = {\n",
+    "    \"extra_prompt_messages\": [MessagesPlaceholder(variable_name=\"memory\")],\n",
+    "    \"system_message\": system_message,\n",
+    "}\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0, model=\"gpt-3.5-turbo-16k-0613\")\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "    memory_key=\"memory\", return_messages=True, llm=llm, max_token_limit=1000)\n",
+    "\n",
+    "agent = initialize_agent(\n",
+    "    tools,\n",
+    "    llm,\n",
+    "    agent=AgentType.OPENAI_FUNCTIONS,\n",
+    "    verbose=True,\n",
+    "    agent_kwargs=agent_kwargs,\n",
+    "    memory=memory,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
