--- a/agent/uploadagentflow.ipynb
+++ b/agent/uploadagentflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "'Education\\nShah and anchor kutchhi\\nengineering collegeCGPA : 8.82Bachelor of Engineering\\n (Artificial intelligence and data\\nscience )Poojan Vig\\nEnthusiastic and driven Data Science Engineer with a year of experience in\\nfintech companies, specializing in AI and machine learning. Recognized for\\nwinning two AI-based hackathons within a six-month period, showcasing a\\nstrong ability to develop and implement creative solutions to complex\\nproblems. Developed notable projects in areas including AI framing, pose\\ndetection, parking, and image classification, demonstrating advanced\\nproficiency in Python, TensorFlow, sklearn, and SQL. Showcased a strong\\ninterest and focus in Reinforcement Learning and Generative AI. Aiming to\\nleverage my skills and passion for data science to solve challenging problems\\nand make significant contributions as a Data Scientist.\\nLinked_inContact\\n+91 9167989179Phone\\npoojanvig.pv@gmail.comEmail IdMumbai, Maharashtra-400074Address:\\nhttps://www.linkedin.com/in/poojan-\\nvig/Technical Skills:\\n Programming Languages: Python, R, Java, C, SQL\\nMachine Learning Libraries: scikit-learn, TensorFlow\\nData Visualization Tools: Matplotlib, Seaborn, ggplot,\\nTableau,Power BI\\nDatabases: MySQL\\nCloud Platforms: Microsoft Azure\\nData Science Specific Skills:\\nStatistical Analysis: Proficient in utilizing statistical methodologies\\nfor analyzing and interpreting complex datasets, including\\nregression analysis, hypothesis testing, and statistical inference.\\nMachine Learning: Extensive experience in applying Supervised and\\nUnsupervised learning, Reinforcement learning algorithms to large\\ndatasets. Skilled in implementing Natural Language Processing\\ntechniques and building Neural Networks for complex prediction\\ntasks.\\nData Wrangling: Demonstrated ability in cleaning, validating, and\\ntransforming raw data into a structured format for analysis.\\nProficient in handling missing data, outliers, and inconsistencies to\\nensure the integrity and reliability of data.\\nData Exploration/Analysis: Proficient in exploring and analyzing\\nlarge datasets to extract insights and identify patterns. Skilled in\\nusing data visualization tools to present findings and effectively\\ncommunicate data-driven insights to technical and non-technical\\nstakeholders.\\nSoft Skills:\\nProblem-solving\\nCommunication\\nTeamwork\\nCritical ThinkingProceeding Skills\\nMicrosoft Ai fundamentalsAdvance DBMSTensorflow developer certificate\\nEnglish\\nHindi\\nPunjabi\\nMarathi Languages'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='{\\n  \"Name\": \"Poojan Vig\",\\n  \"Contact\": \"+91 9167989179\",\\n  \"Location\": \"Mumbai, Maharashtra-400074\",\\n  \"University\": \"Shah and Anchor Kutchhi Engineering College\",\\n  \"Degree\": \"Bachelor of Engineering\",\\n  \"Major\": \"Artificial Intelligence and Data Science\",\\n  \"Graduation_Year\": 0,\\n  \"Skills\": [\\n    \"Python\",\\n    \"R\",\\n    \"Java\",\\n    \"C\",\\n    \"SQL\",\\n    \"scikit-learn\",\\n    \"TensorFlow\",\\n    \"Matplotlib\",\\n    \"Seaborn\",\\n    \"ggplot\",\\n    \"Tableau\",\\n    \"Power BI\",\\n    \"MySQL\",\\n    \"Microsoft Azure\",\\n    \"Statistical Analysis\",\\n    \"Machine Learning\",\\n    \"Data Wrangling\",\\n    \"Data Exploration/Analysis\",\\n    \"Problem-solving\",\\n    \"Communication\",\\n    \"Teamwork\",\\n    \"Critical Thinking\"\\n  ],\\n  \"Certifications\": [\\n    \"Microsoft AI Fundamentals\",\\n    \"Advance DBMS\",\\n    \"TensorFlow Developer Certificate\"\\n  ],\\n  \"Languages\": [\\n    \"English\",\\n    \"Hindi\",\\n    \"Punjabi\",\\n    \"Marathi\"\\n  ],\\n  \"Role\": \"Data Science Engineer\",\\n  \"Company\": \"\",\\n  \"Start_Date\": \"\",\\n  \"End_Date\": \"\",\\n  \"Experience\": 1,\\n  \"Responsibilities\": [],\\n  \"Achievements\": [\\n    \"Won two AI-based hackathons within a six-month period\"\\n  ],\\n  \"Projects\": [\\n    \"AI framing\",\\n    \"Pose detection\",\\n    \"Parking\",\\n    \"Image classification\"\\n  ],\\n  \"LinkedIn_Url\": \"https://www.linkedin.com/in/poojan-vig/\",\\n  \"Github_Url\": \"\",\\n  \"Hobbies\": []\\n}', additional_kwargs={}, example=False)"
+       "AIMessage(content='{\\n  \"Name\": \"Poojan Vig\",\\n  \"Contact\": \"+91 9167989179\",\\n  \"Location\": \"Mumbai, Maharashtra-400074\",\\n  \"University\": \"Shah and Anchor Kutchhi Engineering College\",\\n  \"Degree\": \"Bachelor of Engineering\",\\n  \"Major\": \"Artificial Intelligence and Data Science\",\\n  \"Graduation_Year\": 0,\\n  \"Skills\": [\\n    \"Python\",\\n    \"R\",\\n    \"Java\",\\n    \"C\",\\n    \"SQL\",\\n    \"scikit-learn\",\\n    \"TensorFlow\",\\n    \"Matplotlib\",\\n    \"Seaborn\",\\n    \"ggplot\",\\n    \"Tableau\",\\n    \"Power BI\",\\n    \"MySQL\",\\n    \"Microsoft Azure\",\\n    \"Statistical Analysis\",\\n    \"Machine Learning\",\\n    \"Data Wrangling\",\\n    \"Data Exploration/Analysis\",\\n    \"Problem-solving\",\\n    \"Communication\",\\n    \"Teamwork\",\\n    \"Critical Thinking\"\\n  ],\\n  \"Certifications\": [\\n    \"Microsoft AI Fundamentals\",\\n    \"Advance DBMS\",\\n    \"TensorFlow Developer Certificate\"\\n  ],\\n  \"Languages\": [\\n    \"English\",\\n    \"Hindi\",\\n    \"Punjabi\",\\n    \"Marathi\"\\n  ],\\n  \"Role\": \"Data Science Engineer\",\\n  \"Company\": \"\",\\n  \"Start_Date\": \"\",\\n  \"End_Date\": \"\",\\n  \"Experience\": 0,\\n  \"Responsibilities\": [],\\n  \"Achievements\": [\\n    \"Won two AI-based hackathons within a six-month period\"\\n  ],\\n  \"Projects\": [\\n    \"AI framing\",\\n    \"Pose detection\",\\n    \"Parking\",\\n    \"Image classification\"\\n  ],\\n  \"LinkedIn_Url\": \"https://www.linkedin.com/in/poojan-vig/\",\\n  \"Github_Url\": \"\",\\n  \"Hobbies\": []\\n}', additional_kwargs={}, example=False)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,37 +170,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict"
+       "'{\\n  \"Name\": \"Poojan Vig\",\\n  \"Contact\": \"+91 9167989179\",\\n  \"Location\": \"Mumbai, Maharashtra-400074\",\\n  \"University\": \"Shah and Anchor Kutchhi Engineering College\",\\n  \"Degree\": \"Bachelor of Engineering\",\\n  \"Major\": \"Artificial Intelligence and Data Science\",\\n  \"Graduation_Year\": 0,\\n  \"Skills\": [\\n    \"Python\",\\n    \"R\",\\n    \"Java\",\\n    \"C\",\\n    \"SQL\",\\n    \"scikit-learn\",\\n    \"TensorFlow\",\\n    \"Matplotlib\",\\n    \"Seaborn\",\\n    \"ggplot\",\\n    \"Tableau\",\\n    \"Power BI\",\\n    \"MySQL\",\\n    \"Microsoft Azure\",\\n    \"Statistical Analysis\",\\n    \"Machine Learning\",\\n    \"Data Wrangling\",\\n    \"Data Exploration/Analysis\",\\n    \"Problem-solving\",\\n    \"Communication\",\\n    \"Teamwork\",\\n    \"Critical Thinking\"\\n  ],\\n  \"Certifications\": [\\n    \"Microsoft AI Fundamentals\",\\n    \"Advance DBMS\",\\n    \"TensorFlow Developer Certificate\"\\n  ],\\n  \"Languages\": [\\n    \"English\",\\n    \"Hindi\",\\n    \"Punjabi\",\\n    \"Marathi\"\\n  ],\\n  \"Role\": \"Data Science Engineer\",\\n  \"Company\": \"\",\\n  \"Start_Date\": \"\",\\n  \"End_Date\": \"\",\\n  \"Experience\": 0,\\n  \"Responsibilities\": [],\\n  \"Achievements\": [\\n    \"Won two AI-based hackathons within a six-month period\"\\n  ],\\n  \"Projects\": [\\n    \"AI framing\",\\n    \"Pose detection\",\\n    \"Parking\",\\n    \"Image classification\"\\n  ],\\n  \"LinkedIn_Url\": \"https://www.linkedin.com/in/poojan-vig/\",\\n  \"Github_Url\": \"\",\\n  \"Hobbies\": []\\n}'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output.content\n",
-    "type(json.loads(output.content))"
+    "output.content\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Applicant(Name='Poojan Vig', Contact='+91 9167989179', Location='Mumbai, Maharashtra-400074', University='Shah and Anchor Kutchhi Engineering College', Degree='Bachelor of Engineering', Major='Artificial Intelligence and Data Science', Graduation_Year=0, Skills=['Python', 'R', 'Java', 'C', 'SQL', 'scikit-learn', 'TensorFlow', 'Matplotlib', 'Seaborn', 'ggplot', 'Tableau', 'Power BI', 'MySQL', 'Microsoft Azure', 'Statistical Analysis', 'Machine Learning', 'Data Wrangling', 'Data Exploration/Analysis', 'Problem-solving', 'Communication', 'Teamwork', 'Critical Thinking'], Certifications=['Microsoft AI Fundamentals', 'Advance DBMS', 'TensorFlow Developer Certificate'], Languages=['English', 'Hindi', 'Punjabi', 'Marathi'], Role='Data Science Engineer', Company='', Start_Date='', End_Date='', Experience=1, Responsibilities=[], Achievements=['Won two AI-based hackathons within a six-month period'], Projects=['AI framing', 'Pose detection', 'Parking', 'Image classification'], LinkedIn_Url='https://www.linkedin.com/in/poojan-vig/', Github_Url='', Hobbies=[])"
+       "Applicant(Name='Poojan Vig', Contact='+91 9167989179', Location='Mumbai, Maharashtra-400074', University='Shah and Anchor Kutchhi Engineering College', Degree='Bachelor of Engineering', Major='Artificial Intelligence and Data Science', Graduation_Year=0, Skills=['Python', 'R', 'Java', 'C', 'SQL', 'scikit-learn', 'TensorFlow', 'Matplotlib', 'Seaborn', 'ggplot', 'Tableau', 'Power BI', 'MySQL', 'Microsoft Azure', 'Statistical Analysis', 'Machine Learning', 'Data Wrangling', 'Data Exploration/Analysis', 'Problem-solving', 'Communication', 'Teamwork', 'Critical Thinking'], Certifications=['Microsoft AI Fundamentals', 'Advance DBMS', 'TensorFlow Developer Certificate'], Languages=['English', 'Hindi', 'Punjabi', 'Marathi'], Role='Data Science Engineer', Company='', Start_Date='', End_Date='', Experience=0, Responsibilities=[], Achievements=['Won two AI-based hackathons within a six-month period'], Projects=['AI framing', 'Pose detection', 'Parking', 'Image classification'], LinkedIn_Url='https://www.linkedin.com/in/poojan-vig/', Github_Url='', Hobbies=[])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
